test 2 lien front-back

--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -120,5 +120,8 @@
       }
     }
   },
-  "defaultProject": "BlockCovid"
+  "defaultProject": "BlockCovid",
+  "cli": {
+    "analytics": false
+  }
 }
