--- a/package.json
+++ b/package.json
@@ -11,15 +11,12 @@
     "post install": "ng build  --aot --target=production"
   },
   "private": true,
-  "engines": {
-    "node": "12.18.4",
-    "npm": "6.14.6"
-  },
+  
   "dependencies": {
     "@angular/animations": "~11.0.1",
+    "@angular/cli": "~11.0.2",
     "@angular/common": "~11.0.1",
     "@angular/compiler": "~11.0.1",
-    "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
@@ -30,8 +27,8 @@
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.2",
@@ -48,5 +45,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0"
+  },
+  "engines": {
+    "node": "12.18.4",
+    "npm": "6.14.6"
   }
 }
