--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "angularx-qrcode": "^1.6.4",
     "bootstrap": "^4.5.0",
+    "cors-anywhere": "^0.4.3",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "ngx-cookie-service": "^11.0.2",
